### Version 5.3.0.1606

* Fixed errors caused by missing files

### Version 5.3.0.1604

* Updated for WoW 5.3
* Fixed the "Show tab" option (thanks Greltok)
* Fixed the "Enable right-click menu" option on login (ticket #696)

### Version 5.2.0.1600

* Added a basic status module for absorbs
* Added an option to enable the standard right-click unit menu
* Added clamp insets to allow the frame borders to be offscreen
* Fixed dispel capability detection for druids, and for warlocks with imps
* Fixed the "World Raid as 40 Player" option (thanks Greltok)
* Fixed the default aura status for Eternal Flame
* Fixed errors from the resurrection status module

### Version 5.2.0.1573

* Fixed an error in WoW 5.2

### Version 5.2.0.1571

* Updated for WoW 5.2
* Added an in-game Help panel with basic info, tips, and FAQs
* Added a 40-Player Raid layout setting
* Added a By Class 40 layout
* Added an option to use the 40-Player Raid layout while in a raid group outside of an instance
* Added an option to change the layout frame background texture
* Removed the "Clamp to screen" option; the frame is now permanently clamped, since there's no real reason to allow it to be moved off-screen
* Changed the "Hide tab" and "Hide minimap icon" option to "Show tab" and "Show minimap icon" -- translators should verify the localization of these options

### Version 5.0.5.1554

* Updated for WoW 5.1

### Version 5.0.5.1552

* Fixed an issue causing delays in updating for group changes in battlegrounds (ticket #631)
* Fixed an issue causing blank indicators after switching profiles (ticket #661)
* Fixed an issue causing Grid not to reappear when leaving a pet battle due to PvP combat

### Version 5.0.5.1548

* Fixed some issues with old custom aura statuses

### Version 5.0.5.1539

* Fixed pet battle hiding so that Grid stays properly hidden when the None layout is selected (ticket #648).

### Version 5.0.5.1537

* Added default buffs for monks.